feat(Progress): update markup & support nested progress bars (#261)
* feat(Progress): update markup & support stacked progress bars

* tests(Progress): add tests for nested Progress

--- a/docs/static/docs.css
+++ b/docs/static/docs.css
@@ -180,6 +180,10 @@ pre, code {
   margin-bottom: 1rem;
 }
 
+.docs-example .progress {
+  margin-bottom: 1rem;
+}
+
 
 /* http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript+bash+jsx */
 /**
